[package]
name = "downcida"
version = "0.1.0"
description = "A Rust crate to download audio files using the Lucida API"
edition = "2021"
license = "MIT"
repository = "https://github.com/0pandadev/downcida"
authors = ["PandaDEV"]

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
urlencoding = "2.1.3"

[lib]
name = "downcida"
path = "src/lib.rs"

[[bin]]
name = "downcida"
path = "src/main.rs"
