[package]
name = "downcida"
version = "0.1.0"
edition = "2021"
description = "A Rust crate to download audio files using the Lucida API"
license = "MIT"
repository = "https://github.com/0pandadev/downcida"
readme = "README.md"
authors = ["PandaDEV"]

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }

[lib]
name = "downcida"
path = "src/lib.rs"

[[bin]]
name = "downcida"
path = "src/main.rs"
